fix: fix snackbars alerts

--- a/public/locales/kaz/translation.json
+++ b/public/locales/kaz/translation.json
@@ -62,5 +62,6 @@
     "addStudent": "Қосыңыз студенттің",
     "predmetName": "Пәннің атауы",
     "teacherNameSurname": "Оқытушының Аты-Жөні",
-    "studentNameSurname": "Студенттің Аты-Жөні"
+    "studentNameSurname": "Студенттің Аты-Жөні",
+    "registered": "Тіркеу сәтті аяқталды"
 }
